Fixed science page card and chocolate

--- a/views/science.html
+++ b/views/science.html
@@ -29,6 +29,7 @@
 
     <!-- Your custom styles -->
     <link rel="stylesheet" href="/public/styles/main.css">
+    <link rel="stylesheet" href="/public/styles/science.css">
 
     <!-- SEO Meta Tags -->
     <meta name="description"
@@ -122,15 +123,25 @@
                 </div>
     
                 <!-- Additional Placeholder for Future Content -->
-                <div class="row align-items-start">
-                    <div class="col-md-12">
-                        <h3>More Tips Coming Soon</h3>
-                        <p>
-                            Stay tuned for more practical and easy-to-follow health tips designed to help you on your
-                            journey to better health. Coming soon!
-                        </p>
+                <div class="row">
+                    <!-- Card 1 -->
+                    <div class="col-md-6">
+                        <div class="card mb-4 shadow-sm">
+                            <a href="/views/layouts/recipes/science/chocolate.html" class="card-link">
+                                <img src="/public/images/recipes/chocolate_raw/chocolate_raw.jpg" class="card-img-top card-link-img" alt="Chocolate">
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title">I made my own chocolate and it's bitter!</h5>
+                                <p class="card-text">A look at my attempt to make 100% pure, sugar-free chocolate. Spoiler: it was
+                                    bitter!</p>
+                                <a href="/views/layouts/recipes/science/chocolate.html" class="btn btn-primary">Read more</a>
+                            </div>
+                        </div>
                     </div>
+                
+                    <!-- Future cards here -->
                 </div>
+
             </div>
         </div>
     </main>
