--- a/public/styles/science.css
+++ b/public/styles/science.css
@@ -1,8 +1,26 @@
 #raw-chocolate {
-    max-width: 250px;
-    width: auto;
-    height: auto;
+    width: 100%;
+    object-fit: cover;
     display: block;
     margin: 0 auto;
-    /* This centers the image horizontally */
+}
+
+.card-link-img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    display: block;
+    margin: 0 auto;
+}
+
+
+.card {
+    max-width: 100%;
+    margin: 0 auto;
+    /* Center the card within its column */
+}
+
+.card-body {
+    text-align: center;
+    /* Center the text */
 }
