Update breadcrumbs and links, desserts, snacks, side_dishes

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -25,7 +25,7 @@
             <li><a class="dropdown-item" href="/recipes/breakfast">Breakfast</a></li>
             <li><a class="dropdown-item" href="/recipes/lunch">Lunch</a></li>
             <li><a class="dropdown-item" href="/recipes/dinner">Dinner</a></li>
-            <li><a class="dropdown-item" href="/recipes/dessert">Dessert</a></li>
+            <li><a class="dropdown-item" href="/views/layouts/recipes/desserts/index_desserts.html">Dessert</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
@@ -35,7 +35,7 @@
             <li><a class="dropdown-item" href="/recipes/soups">Soups & Stews</a></li>
             <li><a class="dropdown-item" href="/recipes/vegetarian-vegan">Vegetarian & Vegan</a></li>
             <li><a class="dropdown-item" href="/recipes/low-carb-keto">Low-Carb & Keto</a></li>
-            <li><a class="dropdown-item" href="/recipes/side-dishes">Side Dishes</a></li>
+            <li><a class="dropdown-item" href="/views/layouts/recipes/side_dishes/index_side_dishes.html">Side Dishes</a></li>
             <li><a class="dropdown-item" href="/recipes/gluten-free">Gluten-Free</a></li>
             <li><a class="dropdown-item" href="/recipes/meal-preps">Meal Preps</a></li>
             <li><a class="dropdown-item" href="/recipes/holiday-special-occasions">Holiday & Special Occasions</a></li>
