Added more categories

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -22,14 +22,14 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="/views/layouts/recipes/snacks/index_snacks.html">Snacks</a></li>
-            <li><a class="dropdown-item" href="/recipes/breakfast">Breakfast</a></li>
-            <li><a class="dropdown-item" href="/recipes/lunch">Lunch</a></li>
-            <li><a class="dropdown-item" href="/recipes/dinner">Dinner</a></li>
+            <li><a class="dropdown-item" href="/views/layouts/recipes/breakfast/index_breakfast.html">Breakfast</a></li>
+            <li><a class="dropdown-item" href="/views/layouts/recipes/lunch/index_lunch.html">Lunch</a></li>
+            <li><a class="dropdown-item" href="/views/layouts/recipes/dinner/index_dinner.html">Dinner</a></li>
             <li><a class="dropdown-item" href="/views/layouts/recipes/desserts/index_desserts.html">Dessert</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li><a class="dropdown-item" href="/recipes/appetisers">Appetisers & Starters</a></li>
+            <li><a class="dropdown-item" href="/views/layouts/recipes/appetizers/index_appetizers.html">Appetizers & Starters</a></li>
             <li><a class="dropdown-item" href="/recipes/drinks">Drinks & Smoothies</a></li>
             <li><a class="dropdown-item" href="/recipes/salads">Salads</a></li>
             <li><a class="dropdown-item" href="/recipes/soups">Soups & Stews</a></li>
