All categories added

--- a/views/layouts/recipes/side_dishes/index_side_dishes.html
+++ b/views/layouts/recipes/side_dishes/index_side_dishes.html
@@ -53,7 +53,7 @@
 
     <!-- Main content -->
     <main class="container py-4">
-        <h1>Side Dishes Recipes</h1>
+        <h1>Side Dish Recipes</h1>
 
         <!-- Sorting Options -->
         <div class="sorting-options mb-1">
