--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -30,16 +30,16 @@
               <hr class="dropdown-divider">
             </li>
             <li><a class="dropdown-item" href="/views/layouts/recipes/appetizers/index_appetizers.html">Appetizers & Starters</a></li>
-            <li><a class="dropdown-item" href="/recipes/drinks">Drinks & Smoothies</a></li>
-            <li><a class="dropdown-item" href="/recipes/salads">Salads</a></li>
-            <li><a class="dropdown-item" href="/recipes/soups">Soups & Stews</a></li>
-            <li><a class="dropdown-item" href="/recipes/vegetarian-vegan">Vegetarian & Vegan</a></li>
-            <li><a class="dropdown-item" href="/recipes/low-carb-keto">Low-Carb & Keto</a></li>
+            <li><a class="dropdown-item" href="/views/layouts/recipes/drinks/index_drinks.html">Drinks & Smoothies</a></li>
+            <li><a class="dropdown-item" href="/views/layouts/recipes/salads/index_salads.html">Salads</a></li>
+            <li><a class="dropdown-item" href="/views/layouts/recipes/soups/index_soups.html">Soups</a></li>
+            <li><a class="dropdown-item" href="/views/layouts/recipes/vegan/index_vegan.html">Vegan</a></li>
+            <li><a class="dropdown-item" href="/views/layouts/recipes/vegetarian/index_vegetarian.html">Vegetarian</a></li>
+            <li><a class="dropdown-item" href="/views/layouts/recipes/keto_and_low_carb/index_keto_and_low_carb.html">Low-Carb & Keto</a></li>
             <li><a class="dropdown-item" href="/views/layouts/recipes/side_dishes/index_side_dishes.html">Side Dishes</a></li>
-            <li><a class="dropdown-item" href="/recipes/gluten-free">Gluten-Free</a></li>
-            <li><a class="dropdown-item" href="/recipes/meal-preps">Meal Preps</a></li>
-            <li><a class="dropdown-item" href="/recipes/holiday-special-occasions">Holiday & Special Occasions</a></li>
-            <li><a class="dropdown-item" href="/recipes/quick-easy">Quick & Easy</a></li>
+            <li><a class="dropdown-item" href="/views/layouts/recipes/gluten_free/index_gluten_free.html">Gluten-Free</a></li>
+            <li><a class="dropdown-item" href="/views/layouts/recipes/holidays_and_special_occasions/index_holidays_and_special_occasions.html">Holiday & Special Occasions</a></li>
+            <li><a class="dropdown-item" href="/views/layouts/recipes/quick_and_easy/index_quick_and_easy.html">Quick & Easy</a></li>
           </ul>
         </li>
         <li class="nav-item">
