--- a/views/layouts/recipes/soups/index_soups.html
+++ b/views/layouts/recipes/soups/index_soups.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Real Naked Swedish Chef - Breakfast</title>
+    <title>The Real Naked Swedish Chef - Soups</title>
 
     <!-- Meta tags for social media (Open Graph & Twitter Cards) -->
     <meta property="og:title" content="The Real Naked Swedish Chef" />
@@ -53,7 +53,7 @@
 
     <!-- Main content -->
     <main class="container py-4">
-        <h1>Breakfast Recipes</h1>
+        <h1>Soup Recipes</h1>
 
         <!-- Sorting Options -->
         <div class="sorting-options mb-1">
