Added all recipes page

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -21,6 +21,7 @@
             Recipes
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="/views/layouts/recipes/all_recipes/index_all_recipes.html">All Recipes</a></li>
             <li><a class="dropdown-item" href="/views/layouts/recipes/snacks/index_snacks.html">Snacks</a></li>
             <li><a class="dropdown-item" href="/views/layouts/recipes/breakfast/index_breakfast.html">Breakfast</a></li>
             <li><a class="dropdown-item" href="/views/layouts/recipes/lunch/index_lunch.html">Lunch</a></li>
