Search function in alpha stage

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -54,11 +54,11 @@
         </li>
       </ul>
 
-      <!-- Search Bar centered -->
-      <form class="d-flex mx-auto search-width"">
-        <input class="form-control me-2" type="search" placeholder="Find a recipe or ingredient" aria-label="Search" />
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+    <form class="d-flex mx-auto search-width" onsubmit="handleSearch(event)">
+      <input class="form-control me-2" type="search" id="search-input" placeholder="Find a recipe or ingredient"
+        aria-label="Search" />
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
 
       <!-- Social Media Icons -->
       <div class="social-icons ms-auto">
