--- a/views/layouts/recipes/recipe_pages/chocolate_raw.html
+++ b/views/layouts/recipes/recipe_pages/chocolate_raw.html
@@ -84,6 +84,12 @@
                 <ol id="method"></ol>
             </section>
 
+            <!-- Tips Section -->
+            <section class="tips-section mt-4">
+                <h2>Tips</h2>
+                <ul id="tips"></ul>
+            </section>
+
             <section class="nutrition-facts mt-5">
                 <h3>Nutritional Information</h3>
                 <ul class="list-unstyled" id="nutrition"></ul>
