--- a/views/layouts/recipes/recipe_pages/chicken_pad_thai.html
+++ b/views/layouts/recipes/recipe_pages/chicken_pad_thai.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shiratake Noodle Ramen Soup : The Real Naked Swedish Chef</title>
+    <title>Chicken Pad Thai : The Real Naked Swedish Chef</title>
 
     <!-- Meta tags for social media (Open Graph & Twitter Cards) -->
     <meta property="og:title" content="The Real Naked Swedish Chef" />
