Facebook socials updated

--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -13,7 +13,7 @@
       <div class="col-md-4 mb-4">
         <h6 class="text-uppercase mb-4">Follow Us</h6>
         <div class="d-flex justify-content-center social-icons ms-auto">
-          <a href="https://facebook.com" class="social-icon mx-2">
+          <a href="https://www.facebook.com/groups/the.real.naked.swedish.chef" class="social-icon mx-2">
             <img src="/public/images/icons/facebook.svg" alt="Facebook" width="24" height="24" />
           </a>
           <a href="https://instagram.com" class="social-icon mx-2">
