--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -62,7 +62,7 @@
 
       <!-- Social Media Icons -->
       <div class="social-icons ms-auto">
-        <a href="https://www.facebook.com/profile.php?id=61566619263880" target="_blank" class="social-icon mx-2">
+        <a href="https://www.facebook.com/groups/the.real.naked.swedish.chef" target="_blank" class="social-icon mx-2">
           <img src="/public/images/icons/facebook.svg" alt="Facebook" width="24" height="24" />
         </a>
         <a href="https://instagram.com" class="social-icon mx-2">
