More science - sweeteners

--- a/views/layouts/recipes/science/chocolate.html
+++ b/views/layouts/recipes/science/chocolate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About : The Real Naked Swedish Chef</title>
+    <title>Chocolate's Secrets : The Real Naked Swedish Chef</title>
 
     <!-- Meta tags for social media (Open Graph & Twitter Cards) -->
     <meta property="og:title" content="The Real Naked Swedish Chef" />
