--- a/views/science.html
+++ b/views/science.html
@@ -51,7 +51,6 @@
     <div id="header-placeholder"></div>
 
     <!-- Main content -->
-    <!-- Main content -->
     <main class="container py-4">
         <!-- Main Content in Two Columns -->
         <div class="row">
@@ -121,14 +120,15 @@
                             class="img-fluid rounded shadow" />
                     </div>
                 </div>
-    
+            
                 <!-- Additional Placeholder for Future Content -->
                 <div class="row">
                     <!-- Card 1 -->
                     <div class="col-md-6">
                         <div class="card mb-4 shadow-sm">
                             <a href="/views/layouts/recipes/science/chocolate.html" class="card-link">
-                                <img src="/public/images/recipes/chocolate_raw/chocolate_raw.jpg" class="card-img-top card-link-img" alt="Chocolate">
+                                <img src="/public/images/recipes/chocolate_raw/chocolate_raw.jpg" class="card-img-top card-link-img"
+                                    alt="Chocolate">
                             </a>
                             <div class="card-body">
                                 <h5 class="card-title">I made my own chocolate and it's bitter!</h5>
@@ -138,11 +138,27 @@
                             </div>
                         </div>
                     </div>
-                
-                    <!-- Future cards here -->
-                </div>
-
+            
+                    <!-- Card 2 -->
+                    <div class="col-md-6">
+                        <div class="card mb-4 shadow-sm">
+                            <a href="/views/layouts/recipes/science/artificial_sweeteners.html" class="card-link">
+                                <img src="/public/images/Science/sweeteners/artificial_sweeteners.jpg"
+                                    class="card-img-top card-link-img" alt="Artificial Sweeteners">
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title">The Good, the Bad, and the Ugly of Artificial Sweeteners</h5>
+                                <p class="card-text">Explore the science behind artificial sweeteners, their benefits, risks, and
+                                    the potential health effects they might have.</p>
+                                <a href="/views/layouts/recipes/science/artificial_sweeteners.html" class="btn btn-primary">Read
+                                    more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div> <!-- End Row of Cards -->
+                <!-- Future cards here -->
             </div>
+
         </div>
     </main>
 
