Added bulgur wheat recipe

--- a/views/layouts/recipes/science/artificial_sweeteners.html
+++ b/views/layouts/recipes/science/artificial_sweeteners.html
@@ -73,7 +73,7 @@
                                             class="img-fluid rounded shadow my-3">
                                         <figcaption class="figure-caption">
                                             <small><strong>Figure 1: saccharin</strong> - <em>A common artificial
-                                                    sweetenersyou may recognise from low-calorie products.</em></small>
+                                                    sweetener that you may recognise from low-calorie products.</em></small>
                                         </figcaption>
                                     </figure>
                                     
