--- a/views/layouts/recipes/recipe_pages/bulgur_tomato_basil_chicken.html
+++ b/views/layouts/recipes/recipe_pages/bulgur_tomato_basil_chicken.html
@@ -6,14 +6,16 @@
     <title>Bulgur Wheat with Tomato and Basil Sauce and Chicken : The Real Naked Swedish Chef</title>
 
     <!-- Meta tags for social media (Open Graph & Twitter Cards) -->
-    <meta property="og:title" content="The Real Naked Swedish Chef" />
-    <meta property="og:description" content="Healthy, trusted recipes suited for type 2 diabetes and everyone." />
-    <meta property="og:image" content="/public/images/trnsc_image.jpeg" /> <!-- Update the image path -->
-    <meta property="og:url" content="https://real-naked-swedish-chef.com/" />
+    <!-- Dynamic Meta Tags for Open Graph and Twitter -->
+    <meta property="og:title" content="" id="meta-og-title" />
+    <meta property="og:description" content="" id="meta-og-description" />
+    <meta property="og:image" content="" id="meta-og-image" />
+    <meta property="og:url" content="https://real-naked-swedish-chef.com/" id="meta-og-url" />
+    
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="The Real Naked Swedish Chef" />
-    <meta name="twitter:description" content="Healthy, trusted recipes suited for type 2 diabetes and everyone." />
-    <meta name="twitter:image" content="/public/images/trnsc_image.jpeg" /> <!-- Update the image path -->
+    <meta name="twitter:title" content="" id="meta-twitter-title" />
+    <meta name="twitter:description" content="" id="meta-twitter-description" />
+    <meta name="twitter:image" content="" id="meta-twitter-image" />
 
     <!-- Favicon -->
     <link rel="icon" href="/public/favicon.ico" type="image/x-icon">
